task1/test_results_defects/infer_test/pow_related_errors/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/pow_related_errors.c:67: error: Uninitialized Value
  Pulse found a potential uninitialized value `ans` being read on on line 67.
  65. 		ans=pow(temp,exponent); /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
  66. 	}
  67.         dsink = ans;
                      ^
  68. }
  69. 

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/pow_related_errors.c:111: error: Uninitialized Value
  Pulse found a potential uninitialized value `ans` being read on on line 111.
  109. 		ans=pow(temp,exponent); /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
  110. 	}
  111.         dsink = ans;
                       ^
  112. }
  113. 

#2
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/pow_related_errors.c:154: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 151.
  152. 	pow_related_errors_007_s* ptr_newarr =(pow_related_errors_007_s *)malloc(sizeof(pow_related_errors_007_s));
  153. 
  154. 	newarr->arr[0]=10^3800;
        ^
  155. 	ptr_newarr->arr[0]=10^3800;
  156. 

#3
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/pow_related_errors.c:155: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 152.
  153. 
  154. 	newarr->arr[0]=10^3800;
  155. 	ptr_newarr->arr[0]=10^3800;
        ^
  156. 
  157. 	 ans=pow(newarr->arr[0],exponent);

Found 4 issues
                      Issue Type(ISSUED_TYPE_ID): #
  Uninitialized Value(PULSE_UNINITIALIZED_VALUE): 2
        Nullptr Dereference(NULLPTR_DEREFERENCE): 2
